--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,17 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.visibility {
+  display: block;
+}
