add npm slim-select

--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -8,11 +8,12 @@
   display: none;
 }
 .breed-select {
+  width: 50%;
   margin: 0 auto;
   display: none;
 
   &.visibility {
-    display: block;
+    display: flex;
   }
 }
 .error {
