--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -4,9 +4,7 @@
   margin: 0 auto;
   width: 100%;
 }
-.loader {
-  display: none;
-}
+
 .breed-select {
   width: 50%;
   margin: 0 auto;
@@ -28,6 +26,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  display: none;
+
+  &.visibility {
+    display: flex;
+  }
 }
 .cat-info__img {
   margin-right: 30px;
@@ -50,4 +54,47 @@
 }
 .cat-info__temperament {
   font-weight: 500;
+}
+
+.loader {
+  width: calc(100px - 14px);
+  height: 50px;
+  position: absolute;
+  animation: flippx 1s infinite linear;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+
+  &.visibility {
+    display: block;
+  }
+}
+.loader:before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+
+  background: #ff3d00;
+  transform-origin: -14px 50%;
+  animation: spin 0.5s infinite linear;
+}
+@keyframes flippx {
+  0%,
+  49% {
+    transform: scaleX(1);
+  }
+  50%,
+  100% {
+    transform: scaleX(-1);
+  }
+}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
 }
